--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.anli</groupId>
-    <artifactId>jpa-jta-spring-extension</artifactId>
+    <artifactId>jpa-jta-extensions</artifactId>
     <version>0.1</version>
     <packaging>jar</packaging>
+
     <dependencies>
         <dependency>
             <groupId>javax.transaction</groupId>
