--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <version>4.1.7.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
